# Ising

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  ising_2d_maps.cpp  ising_2d_temperature.cpp  ising_3d_maps.cpp  ising_3d_temperature.cpp
python/: Ising_2d.py  ParseTvsResults.ipynb  parse_Ising2d.py
src/: CMakeLists.txt  ising_2d.cpp  ising_2d.hpp  ising_3d.cpp  ising_3d.hpp  ising_base.cpp  ising_base.hpp
